<resources>
	<string name="app_name">BluetoothSDKDemo_V2</string>
	<string name="title_activity_sample">SampleActivity</string>
	<string name="title_activity_navigation">NavigationActivity</string>

	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>

	<string name="action_settings">Settings</string>

	<string name="scan">扫描</string>
	<string name="bind">绑定</string>
	<string name="unbind">退出绑定模式</string>
	<string name="open">刷卡</string>
	<string name="set">设置</string>
	<string name="log">日志：</string>
	<string name="connection_key">通讯密钥：</string>
	<string name="unknown_device">未知</string>
	<string name="ble_reader">Ble Reader</string>
	<string name="input_hint">请输入读卡器名字</string>
	<string name="open_data">开门证书：</string>
	<string name="get_open_info">获取蓝牙开门信息</string>
	<string name="get_open_cert">获取人员开门证书</string>
	<string name="reset_open_cert">重置人员开门证书</string>
	<string name="close_open_door">关闭人员蓝牙开门</string>
	<string name="BuildingId">楼栋Id:</string>
	<string name="PersonalId">人员Id:</string>
	<string name="ip_addr">IP地址:</string>
	<string name="port">端口:</string>
</resources>
